save for test tag p

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         hello world
     </p>
     <h1>im amirreza</h1>
+    <P>i love github</P>
     <script src="assets/materialize-v1.0.0/materialize/js/materialize.min.js">
     </script>
     <script src="js/main.js"></script>
