--- a/index.html
+++ b/index.html
@@ -13,23 +13,36 @@
 <body>
     <nav>
 
-        <nav>
+        <nav class="grey lighten-2 z-depth-0">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="#!" class="black-text">home</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">Javascript</a></li>
-                    <li><a href="mobile.html">Mobile</a></li>
+                    <li><a href="sass.html" class="black-text">Sass</a></li>
+                    <li><a href="badges.html" class="black-text">Components</a></li>
+                    <li><a href="collapsible.html" class="black-text">Javascript</a></li>
+                    <li><a href="mobile.html" class="black-text">Mobile</a></li>
                 </ul>
             </div>
         </nav>
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
+            <li>
+                <div class="user-view">
+                    <div class="background">
+                        <img src="assets/image/office.jpg" class="width_95">
+                    </div>
+                    <a href="#user"><img class="circle" src="assets/image/avatar.jpg"></a>
+                    <a href="#name"><span class="white-text name">amirrezaravan</span></a>
+                    <a href="#email"><span class="white-text email">amirrezaravan1384@gmail.com</span></a>
+                </div>
+            </li>
+            <li><a href="#!"><i class="material-icons">insert_link</i>First Link With Icon</a></li>
+            <li><a href="#!">Second Link</a></li>
+            <li>
+                <div class="divider"></div>
+            </li>
+            <li><a class="subheader">Subheader</a></li>
+            <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
         </ul>
     </nav>
     <script src="assets/materialize-v1.0.0/materialize/js/materialize.min.js">
